JDK 8 compatible SWT version